node_js_dockerized.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-dockerized-deployment
  labels:
    app: node_app_dockerized
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node_app_dockerized
  template:
    metadata:
      labels:
        app: node_app_dockerized
    spec:
      containers:
      - name: node-app-dockerized
        image: registry.gitlab.com/gribochechek/node_app_dockerized
        resources:
         requests:
          memory: "256M"
          cpu: "100m"
         limits:
          memory: "512M"
          cpu: "100m"
        ports:
        - containerPort: 3000
        readinessProbe:
           httpGet:
             scheme: HTTP
             path: /
             port: 3000
           initialDelaySeconds: 10
           periodSeconds: 5
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - "ps auxfww | grep node | grep server"
          initialDelaySeconds: 10
          periodSeconds: 5
       
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-dockerized-service
  labels:
     app: node_app_dockerized
spec:
  type: NodePort
  selector:
    app: node_app_dockerized
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
