node-js-docker-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-js-service
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: kube-nodeapp
    http:
      paths:       
      - backend:
          service:
            name: node-app-dockerized-service
            port:
              number: 3000
        path: /
        pathType: Prefix
